--- a/State_Finder/package.json
+++ b/State_Finder/package.json
@@ -10,8 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "moment": "^2.30.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^19.2.0",
+    "react-image-gallery": "^1.4.0",
+    "react-router-dom": "^7.11.0",
+    "react-tabs": "^6.1.0",
+    "react-widgets": "^5.8.6",
+    "react-widgets-moment": "^5.0.20"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
