--- a/State_Finder/package.json
+++ b/State_Finder/package.json
@@ -2,12 +2,15 @@
   "name": "state-finder",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://NadilaBasilu.github.io/State-Finder-App/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:ui": "vitest --ui"
@@ -36,6 +39,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "happy-dom": "^20.0.11",
     "react-dnd-html5-backend": "^16.0.1",
