--- a/State_Finder/package.json
+++ b/State_Finder/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "state-finder",
+  "name": "Estate-finder",
   "private": true,
   "version": "0.0.0",
   "homepage": "https://NadilaBasilu.github.io/",
